# TradeMindAI

./: .gitignore  README.md  pyproject.toml
src/trademindai/: __init__.py  analysis.py  main.py
tests/: test_analysis.py
