[project]
name = "trademindai"
version = "0.1.0"
description = "TradeMind AI stock analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "TradeMindAI" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "yfinance>=0.2",
]

[project.scripts]
trademindai = "trademindai.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["trademindai"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
